--- a/trunk/.classpath
+++ b/trunk/.classpath
@@ -3,6 +3,6 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry exported="true" kind="lib" path="F:/Work/AIC/Usbong/AdditionalLibraries/commons-lang3-3.0.1-bin/commons-lang3-3.0.1/commons-lang3-3.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="F:/workspaceORIG/usbong_android/lib/commons-lang3-3.0.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
