--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -9,7 +9,7 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
 
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:label="@string/app_name" android:icon="@drawable/usbong_icon">
         <activity android:name=".TitleActivity"
                   android:label="@string/app_name" android:screenOrientation="portrait">
             <intent-filter>
