--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="usbong.android"
-      android:versionCode="11"
-      android:versionName="Nov. 7, 2012">
+      android:versionCode="12"
+      android:versionName="Dec. 19, 2012"
+>
     <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.CAMERA"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
@@ -27,5 +28,6 @@
 		<activity android:name="SettingsActivity" android:screenOrientation="portrait"></activity>
 		<activity android:name="RegisterActivity" android:screenOrientation="portrait"></activity>        
 		<activity android:name="TitleActivity" android:screenOrientation="portrait"></activity>        
-    </application>
+		<activity android:name=".features.node.PaintActivity" android:screenOrientation="portrait"></activity>        		
+	</application>
 </manifest>
