--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="usbong.android"
-      android:versionCode="13"
-      android:versionName="Dec. 24, 2012"
+      android:versionCode="14"
+      android:versionName="Feb. 2, 2013"
+      android:installLocation="preferExternal"
 >
     <uses-sdk android:minSdkVersion="8" />
     <uses-permission android:name="android.permission.CAMERA"></uses-permission>
