Tasks accomplished: +fixed: forward and backward traversal of usbong tree --> (as requested) previous answers are now shown on the screen --> this took awhile, because I had to make sure that the code revisions applied to all the nodes (e.g. textfields, textareas, radio buttons, checkboxes).

--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="usbong.android"
-      android:versionCode="17"
-      android:versionName="Feb. 19, 2013"
+      android:versionCode="18"
+      android:versionName="March 4, 2013"
       android:installLocation="preferExternal"      
 >
 	<supports-screens
