--- a/trunk/bin/AndroidManifest.xml
+++ b/trunk/bin/AndroidManifest.xml
@@ -1,11 +1,49 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="usbong.android"
-      android:versionCode="14"
-      android:versionName="Feb. 5, 2013"
+      android:versionCode="24"
+      android:versionName="June 19, 2013"
       android:installLocation="preferExternal"      
 >
     <uses-sdk android:minSdkVersion="8" />
+
+    <!-- Reference: answer of Dixit Patel from stackoverflow; http://stackoverflow.com/questions/14562738/why-my-app-is-not-compatible-with-nexus-7-in-google-play-->    	
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
+        android:normalScreens="true"
+        android:smallScreens="true" />
+
+	<compatible-screens>
+    <!-- small size screens -->
+     <screen android:screenSize="small" android:screenDensity="ldpi" />
+    <screen android:screenSize="small" android:screenDensity="mdpi" />
+    <screen android:screenSize="small" android:screenDensity="hdpi" />
+    <screen android:screenSize="small" android:screenDensity="xhdpi" />
+
+    <!--Only hdpi and xhdpi for normal size screens -->
+    <screen android:screenSize="normal" android:screenDensity="ldpi" />
+    <screen android:screenSize="normal" android:screenDensity="mdpi" />
+    <screen android:screenSize="normal" android:screenDensity="hdpi" />
+    <screen android:screenSize="normal" android:screenDensity="xhdpi" />
+
+    <!-- all large size screens -->
+    <screen android:screenSize="large" android:screenDensity="ldpi" />
+    <screen android:screenSize="large" android:screenDensity="mdpi" />
+    <screen android:screenSize="large" android:screenDensity="hdpi" />
+    <screen android:screenSize="large" android:screenDensity="xhdpi" />
+
+    <!-- all xlarge size screens -->
+    <screen android:screenSize="xlarge" android:screenDensity="ldpi" />
+    <screen android:screenSize="xlarge" android:screenDensity="mdpi" />
+    <screen android:screenSize="xlarge" android:screenDensity="hdpi" />
+    <screen android:screenSize="xlarge" android:screenDensity="xhdpi" />
+
+    <!-- Special case for Nexus 7 -->
+    <screen android:screenSize="large" android:screenDensity="213" />
+
+    </compatible-screens>
+	
     <uses-permission android:name="android.permission.CAMERA"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
     <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
