--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="usbong.android"
-      android:versionCode="25"
-      android:versionName="June 28, 2013"
+      android:versionCode="27"
+      android:versionName="Sept. 10, 2013"
       android:installLocation="preferExternal"      
 >
     <uses-sdk android:minSdkVersion="8" />
