--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,13 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="usbong.android"
-      android:versionCode="36"
-      android:versionName="Feb. 25, 2014"
+      android:versionCode="37"
+      android:versionName="March. 20, 2014"
       android:installLocation="preferExternal"      
 >
     <uses-sdk android:minSdkVersion="8" 
-              android:targetSdkVersion="18" />
+              android:targetSdkVersion="19" />
 	
+    <supports-screens android:smallScreens="true"
+              android:normalScreens="true"
+              android:largeScreens="true"
+              android:xlargeScreens="true" />
+    
     <uses-permission android:name="android.permission.CAMERA"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
     <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
