--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="usbong.android"
-      android:versionCode="40"
-      android:versionName="July 31, 2014"
-      android:installLocation="preferExternal"      
+      android:versionCode="41"
+      android:versionName="Sept. 10, 2014"
+      android:installLocation="auto"      
 >
     <uses-sdk android:minSdkVersion="8" 
               android:targetSdkVersion="19" />
