--- a/trunk/AndroidManifest.xml
+++ b/trunk/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="usbong.android"
-      android:versionCode="41"
-      android:versionName="Sept. 10, 2014"
+      android:versionCode="42"
+      android:versionName="Oct. 4, 2014"
       android:installLocation="auto"      
 >
-    <uses-sdk android:minSdkVersion="8" 
+    <uses-sdk android:minSdkVersion="11" 
               android:targetSdkVersion="19" />
 	
     <supports-screens android:smallScreens="true"
@@ -22,7 +22,8 @@
  	<uses-feature android:name="android.hardware.camera.autofocus" />
  
     <application android:label="@string/app_name" android:icon="@drawable/usbong_icon"
-        android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen">
+        android:theme="@android:style/Theme.Black.NoTitleBar.Fullscreen"
+        android:allowBackup="false">
         <activity android:name="SignInActivity"
                   android:label="@string/app_name" android:screenOrientation="portrait">
             <intent-filter>
