--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="usbong.android"
-      android:versionCode="46"
-      android:versionName="May 25, 2015"
+      android:versionCode="48"
+      android:versionName="May 26, 2015"
       android:installLocation="auto"      
 >
     <uses-sdk android:minSdkVersion="8" 
-              android:targetSdkVersion="19" />
+              android:targetSdkVersion="22" />
 	
     <supports-screens android:smallScreens="true"
               android:normalScreens="true"
@@ -18,6 +18,9 @@
     <uses-permission android:name="android.permission.RECORD_AUDIO"></uses-permission>
     <uses-permission android:name="android.permission.INTERNET"></uses-permission>
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+	<uses-permission android:name="android.permission.READ_PHONE_STATE"/>
+    <uses-permission android:name="android.permission.WAKE_LOCK"/>
     <uses-feature android:name="android.hardware.camera" />
  	<uses-feature android:name="android.hardware.camera.autofocus" />
  
@@ -39,5 +42,12 @@
 		<activity android:name="TitleActivity" android:screenOrientation="portrait"></activity>        
 		<activity android:name=".features.node.PaintActivity" android:screenOrientation="portrait"></activity>        		
 		<activity android:name=".features.node.QRCodeReaderActivity" android:screenOrientation="portrait"></activity>        				
+		<activity android:name="usbong.android.community.FitsListDisplay" android:screenOrientation="portrait"
+		    android:theme="@style/AppTheme"></activity>
+		<activity android:name="usbong.android.community.SingleItemView" android:screenOrientation="portrait" >
+			<meta-data
+	            android:name="android.support.PARENT_ACTIVITY"
+	            android:value="UsbongMainActivity" />
+		</activity>			
 	</application>
 </manifest>
