--- a/project.properties
+++ b/project.properties
@@ -8,4 +8,6 @@
 # project structure.
 
 # Project target.
-target=android-16
+target=android-22
+android.library=false
+android.library.reference.1=../appcompat_v7
