--- a/.classpath
+++ b/.classpath
@@ -3,10 +3,10 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Mike/git/usbong/lib/commons-lang3-3.0.1.jar"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.LIBRARIES"/>
 	<classpathentry exported="true" kind="con" path="com.android.ide.eclipse.adt.DEPENDENCIES"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Mike/git/usbong/lib/universal-image-loader-1.9.3.jar"/>
-	<classpathentry exported="true" kind="lib" path="C:/Users/Mike/git/usbong/lib/YouTubeAndroidPlayerApi.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/universal-image-loader-1.9.3.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/commons-lang3-3.0.1.jar"/>
+	<classpathentry exported="true" kind="lib" path="lib/YouTubeAndroidPlayerApi.jar"/>
 	<classpathentry kind="output" path="bin/classes"/>
 </classpath>
