--- a/project.properties
+++ b/project.properties
@@ -10,4 +10,4 @@
 # Project target.
 target=android-22
 android.library=false
-android.library.reference.1=../appcompat_v7
+android.library.reference.1=../../workspace/appcompat_v7
