--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -12,7 +12,9 @@
     <supports-screens android:smallScreens="true"
               android:normalScreens="true"
               android:largeScreens="true"
-              android:xlargeScreens="true" />
+              android:xlargeScreens="true" 
+              android:resizeable="true"
+              android:anyDensity="true"/>
     
     <uses-permission android:name="android.permission.CAMERA"></uses-permission>
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"></uses-permission>
