--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -2,11 +2,11 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="usbong.android"
       android:versionCode="60"
-      android:versionName="Sept. 20, 2015"
+      android:versionName="Sept. 22, 2015"
       android:installLocation="auto"      
 >
 
-    <uses-sdk android:minSdkVersion="10" 
+    <uses-sdk android:minSdkVersion="11" 
               android:targetSdkVersion="22" />
 	
     <supports-screens android:smallScreens="true"
@@ -54,8 +54,14 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="UsbongMainActivity" android:screenOrientation="portrait"></activity>
-        <activity android:name="UsbongDecisionTreeEngineActivity" android:screenOrientation="portrait"></activity>
+        <activity android:name="UsbongMainActivity" android:screenOrientation="portrait"
+                  android:theme="@style/ThemeHoloWithActionBar"></activity>
+        <activity android:name="UsbongDecisionTreeEngineActivity" android:screenOrientation="portrait"
+            	  android:theme="@style/ThemeHoloWithActionBar">
+            <meta-data
+                android:name="android.support.PARENT_ACTIVITY"
+                android:value="usbong.android.UsbongMainActivity" />
+        </activity>
         <activity android:name="CameraActivity" android:permission="android.permission.CAMERA" android:screenOrientation="nosensor"></activity>
 		<activity android:name="SettingsActivity" android:screenOrientation="portrait"></activity>
 		<activity android:name="RegisterActivity" android:screenOrientation="portrait"></activity>        
